# gitargus

./: .gitignore  README.md  gitargus.service  install.py  install.sh  pre-push  pyproject.toml  requirements.txt  run.py  server.py
.github/workflows/: publish-to-pypi.yml
src/gitargus/: __main__.py  core.py  daemon.py  handler.py  hooks.py  install.py  jobs.py  main.py  messaging.py  persistence.py
